Mise à jour de mon package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "isolatedModules": true,
     "jsx": "react-jsx",
     "declaration": true,
+    "rootDir": "src/lib",
     "outDir": "dist"
   },
   "include": [
