--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "build": "rm -rf dist && tsc && npm run copy:css",
+    "copy:css": "cpy './src/lib/styles/*.css' './dist/styles'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -59,6 +58,7 @@
     "@babel/preset-typescript": "^7.21.4",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "cpy-cli": "^4.2.0",
     "eslint": "^8.38.0",
     "typescript": "^5.0.4"
   }
