--- a/package.json
+++ b/package.json
@@ -12,18 +12,10 @@
     "url": "git+https://github.com/PalaciosCaroline/typescript-table.git"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.23",
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
+   
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +52,15 @@
     "@typescript-eslint/parser": "^5.58.0",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.38.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.23",
+    "@types/react": "^18.0.34",
+    "@types/react-dom": "^18.0.11",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   }
 }
