--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "url": "git+https://github.com/PalaciosCaroline/typescript-table.git"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0"
   },
   "scripts": {
@@ -60,6 +58,8 @@
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
