--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
     "web-vitals": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "keywords": ["table", "typescript", "react","datatable","pagination","sorting","filtering","managing columns"]
 }
