Mise à jour de mon package: keywords

--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "pagination",
     "sorting",
     "filtering",
-    "managing columns"
+    "managing columns",
+    "eslint",
+    "jest",
+    "css3"
   ]
 }
