--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "typescript-table",
   "version": "3.0.8",
   "main": "dist/index.js",
+  "license": "MIT",
   "files": [
     "dist",
     "README.md"
