--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
       "last 1 safari version"
     ]
   },
+  "optionalDependencies": {
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
+    "xlsx": "^0.18.5"
+  },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "cpy-cli": "^4.2.0",
-    "eslint": "^8.38.0",
-    "typescript": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -58,10 +59,15 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "cpy-cli": "^4.2.0",
+    "eslint": "^8.38.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^5.0.4",
+    "web-vitals": "^2.1.4"
   },
   "keywords": [
     "table",
@@ -75,6 +81,7 @@
     "eslint",
     "jest",
     "css3",
-    "accessibility"
+    "accessibility",
+    "export data"
   ]
 }
