--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "optionalDependencies": {
+    "typescript-exportdata": "^1.0.3",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
