--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     ]
   },
   "optionalDependencies": {
-    "typescript-exportdata": "^1.0.3",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "typescript-exportdata": "^1.0.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -64,6 +64,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.38.0",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
