--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "optionalDependencies": {
+  "peerDependencies": {
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
@@ -50,7 +50,7 @@
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -62,6 +62,7 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.5.0",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.38.0",
     "prettier": "^2.8.8",
@@ -70,6 +71,14 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!typescript-exportdata).+\\.js$"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "keywords": [
     "table",
