--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.8.0"
   },
   "scripts": {
+    "docs": "typedoc --out ./docs ./src/lib",
     "start": "react-scripts start",
     "build": "rm -rf dist && tsc && npm run copy:css",
     "copy:css": "cpy \"./src/lib/styles/*.css\" \"./dist/styles\"",
@@ -69,6 +70,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typedoc": "^0.24.8",
     "typescript": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
